# lighthouseAI

./: .gitignore  LICENSE  MVP_PLAN.md  Makefile  PROTOTYPE_SUMMARY.md  README.md  TASKS.md  cli.py  demo.py  env.example  main.py  main_simple.py  prd_voice_driven_web_navigator_for_blind_low_vision_users.md  pyproject.toml  requirements.txt  test_api.py
lighthouse/api/: routes.py
lighthouse/config/: domains.yaml  settings.py
lighthouse/core/: asr.py  browser.py  nlu.py  safety.py  state.py  tts.py
lighthouse/tests/: test_basic.py
lighthouse/utils/: accessibility.py  audio.py  logging.py
scripts/: setup.sh  test_sites.py
